// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CredentialsTableCells should export specific function components: function components 1`] = `
{
  "actionsCell": [Function],
  "authType": [Function],
  "description": [Function],
  "sourcesCellContent": [Function],
  "sourcesContent": [Function],
  "statusCell": [Function],
}
`;

exports[`CredentialsTableCells should return consistent cell results: basic actionsCell cell 1`] = `
<OverflowMenu
  breakpoint="lg"
>
  <OverflowMenuContent>
    <OverflowMenuGroup
      groupType="button"
    >
      <OverflowMenuItem>
        <Tooltip
          content="t(table.label, {"context":"view"})"
          delayShow={500}
          id={null}
          isPopover={false}
          placement="top"
        >
          <Button
            aria-label="t(table.label, {"context":"view"})"
            className="quipucords-view__row-button"
            onClick={[Function]}
            variant="plain"
          >
            <EyeIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
          </Button>
        </Tooltip>
      </OverflowMenuItem>
      <OverflowMenuItem>
        <Tooltip
          content="t(table.label, {"context":"delete"})"
          delayShow={500}
          id={null}
          isPopover={false}
          placement="top"
        >
          <Button
            aria-label="t(table.label, {"context":"delete"})"
            className="quipucords-view__row-button"
            onClick={[Function]}
            variant="plain"
          >
            <TrashIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
          </Button>
        </Tooltip>
      </OverflowMenuItem>
    </OverflowMenuGroup>
  </OverflowMenuContent>
  <OverflowMenuControl>
    <DropdownSelect
      ariaLabel="Select option"
      buttonVariant="plain"
      className=""
      direction="down"
      id="generatedid-"
      isDisabled={false}
      isDropdownButton={true}
      isFlipEnabled={false}
      isInline={true}
      isToggleText={true}
      maxHeight={null}
      name={null}
      onSelect={[Function]}
      onSplitButton={[Function]}
      options={
        [
          {
            "title": "t(table.label, {"context":"edit"})",
            "value": "edit",
          },
          {
            "title": "t(table.label, {"context":"delete"})",
            "value": "delete",
          },
        ]
      }
      placeholder={
        <EllipsisVIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      }
      position="right"
      selectedOptions={null}
      splitButtonVariant={null}
      toggleIcon={null}
      variant="single"
    />
  </OverflowMenuControl>
</OverflowMenu>
`;

exports[`CredentialsTableCells should return consistent cell results: basic authType cell 1`] = `
<Tooltip
  content="t(table.label_auth, {"context":"tooltip"})"
  delayShow={500}
  id={null}
  isPopover={false}
  placement="top"
>
  t(table.label_auth, {"context":"cell"})
</Tooltip>
`;

exports[`CredentialsTableCells should return consistent cell results: basic description cell 1`] = `
<Grid
  hasGutter={false}
>
  <GridItem
    sm={2}
  >
    <Tooltip
      content="t(table.label, {"context":""})"
      delayShow={500}
      id={null}
      isPopover={false}
      placement="top"
    >
      <ContextIcon
        size="sm"
        symbol={null}
      />
    </Tooltip>
  </GridItem>
  <GridItem
    sm={10}
  >
    <div>
      <strong
        data-test="item_name"
      />
    </div>
  </GridItem>
</Grid>
`;

exports[`CredentialsTableCells should return consistent cell results: basic sourcesCellContent cell 1`] = `
{
  "content": <Tooltip
    content="t(table.label_status_tooltip, {"context":"sources","count":0})"
    delayShow={500}
    id={null}
    isPopover={false}
    placement="top"
  >
    t(table.label_status, {"context":"cell","count":0}, [object Object],[object Object])
  </Tooltip>,
  "expandedContent": undefined,
}
`;

exports[`CredentialsTableCells should return consistent cell results: basic sourcesContent cell 1`] = `
<List
  isPlain={true}
/>
`;

exports[`CredentialsTableCells should return consistent cell results: basic statusCell cell 1`] = `
<Tooltip
  content="t(table.label_status_tooltip, {"context":"unknown","count":0})"
  delayShow={500}
  id={null}
  isPopover={false}
  placement="top"
>
  t(table.label_status, {"context":"cell","count":0}, [object Object],[object Object])
</Tooltip>
`;
